# kvml

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  learning.md  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  README.md  devcontainer.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_002_001.txt  task_002_002.txt  task_002_003.txt  task_002_004.txt  task_002_005.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  tasks.json
.trunk/: trunk.yaml
components/ble_hid/: CMakeLists.txt
components/ble_hid/include/: ble_hid.h  ble_hid_debug.h  ble_hid_device.h  ble_hid_keyboard.h  ble_hid_mouse.h
components/ble_hid/src/: ble_hid.c  ble_hid_device.c  ble_hid_keyboard.c  ble_hid_mouse.c
components/common/: CMakeLists.txt
components/common/include/: common_utils.h  config_manager.h  error_handling.h
components/common/src/: common_utils.c  config_manager.c  error_handling.c
components/kvml/: CMakeLists.txt
components/kvml/include/: device_discovery.h  host_switching.h  kvml_core.h
components/kvml/src/: device_discovery.c  host_switching.c  kvml_core.c
components/uart_protocol/: CMakeLists.txt
components/uart_protocol/include/: uart_frame.h  uart_protocol.h
components/uart_protocol/src/: uart_frame.c  uart_protocol.c
components/usb_host/: CMakeLists.txt
components/usb_host/include/: usb_hid_host.h  usb_host.h
components/usb_host/src/: usb_hid_host.c  usb_host.c
main/: CMakeLists.txt  idf_component.yml  kvml.c  wifi_config.h.template
